# haskell-librdkafka

./: ChangeLog.md  default.nix  librdkafka.cabal
nix/: default.nix  overlay.nix
src/: LibRdKafka.chs
